#791 - process management page - form wrap fix

--- a/src/app/pages/process-management/process-management.component.scss
+++ b/src/app/pages/process-management/process-management.component.scss
@@ -1,15 +1,16 @@
 // form bar
 .app-formbar {
-  /* flex-wrap: wrap;
+  flex-wrap: wrap;
 
-  .mat-mdc-button-base {
+  .mat-mdc-outlined-button {
     margin-bottom: 8px;
-  } */
+  }
 
   .mat-mdc-form-field {
     &.app-state,
     &.app-pid {
-      $app-width: 260px;
+      //$app-width: 260px;
+      $app-width: 370px;
       flex: 1 1 $app-width;
       max-width: $app-width;
       min-width: $app-width;
@@ -21,19 +22,19 @@
       max-width: $app-width;
       min-width: $app-width;
     }
-    /* &.app-profile,
+    
     &.app-user {
       $app-width: 180px;
       flex: 1 1 $app-width;
       max-width: $app-width;
       min-width: $app-width;
-    } */
+    }
 
-    /* ::ng-deep {
+    ::ng-deep {
       .mat-mdc-form-field-subscript-wrapper {
         line-height: 8px !important;
       }
-    } */
+    }
   }
 }
 
